# klint-asterinas

./: .envrc  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  flake.nix  rust-toolchain  shell.nix
.cargo/: config.toml
.github/workflows/: ci.yml  nightly.yml
.reuse/: dep5
doc/: atomic_context.md  build_error.md  infallible_allocation.md  kernel.patch  not_using_prelude.md  stack_size.md
src/: atomic_context.rs  attribute.rs  ctxt.rs  driver.rs  infallible_allocation.rs  lattice.rs  main.rs  messages.ftl  mir.rs  monomorphize_collector.rs  rustdoc.rs  serde.rs  symbol.rs  util.rs
src/binary_analysis/: build_error.rs  dwarf.rs  mod.rs  reconstruct.rs  stack_size.rs
src/diagnostic/: use_stack.rs
src/diagnostic_items/: mod.rs  out_of_band.rs
src/hir_lints/: c_str_literal.rs  mod.rs  not_using_prelude.rs
src/mir/: drop_shim.rs  elaborate_drop.rs  patch.rs
src/preempt_count/: adjustment.rs  annotation.rs  check.rs  dataflow.rs  expectation.rs  mod.rs
src/utils/: anymap.rs
tests/: compile-test.rs
tests/dep/: .gitignore  bin.rs  main.rs  run.sh  spin.rs
tests/ui/: adjustment.rs  adjustment.stderr  annotation.rs  annotation.stderr  box_free.rs  box_free.stderr  build_error.rs  build_error.stderr  c_str_literal.rs  c_str_literal.stderr  calltrace.rs  calltrace.stderr  drop-array.rs  drop-array.stderr  drop-slice.rs  drop-slice.stderr  function-pointer.rs  function-pointer.stderr  iflet.rs  iflet.stderr  infinite_recursion.rs  infinite_recursion.stderr  obligation-resolution.rs  obligation-resolution.stderr  recursion.rs  recursion.stderr  stack_frame_size.rs  stack_frame_size.stderr  upcasting.rs  upcasting.stderr  vtable.rs  vtable.stderr  waker.rs  waker.stderr
