# Copyright Gary Guo.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "klint"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
preempt_count = []
default = ["preempt_count"]

[dependencies]
rusqlite = "0.37"
home = "0.5"
iced-x86 = { version = "1.21.0", default-features = false, features = ["std", "decoder", "gas"] }

[dev-dependencies]
compiletest_rs = { version = "0.11", features = [ "tmp" ] }

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)]
rustc_private = true
