# Copyright Gary Guo.
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "klint"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
default-run = "klint"

[dependencies]
rusqlite = "0.38"
home = "0.5"
object = "0.38.0"
gimli = "0.33"
iced-x86 = { version = "1.21.0", default-features = false, features = ["std", "decoder", "gas"] }

[dev-dependencies]
compiletest_rs = { version = "0.11", features = [ "tmp" ] }

[[bin]]
name = "klint"
path = "src/main.rs"

[[bin]]
name = "klint-rustdoc"
path = "src/rustdoc.rs"

[package.metadata.rust-analyzer]
# This crate uses #![feature(rustc_private)]
rustc_private = true
